--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-table": "^8.21.2",
+    "@turf/boolean-point-in-polygon": "^7.2.0",
+    "@turf/helpers": "^7.2.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
