--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@turf/boolean-point-in-polygon": "^7.2.0",
     "@turf/helpers": "^7.2.0",
     "axios": "^1.8.4",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
@@ -52,6 +53,7 @@
     "pdfjs-dist": "^3.4.120",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
