--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "framer-motion": "^12.23.9",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
@@ -58,6 +59,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-pdf": "^9.2.1",
     "react-query": "^3.39.3",
