--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-quilljs": "^2.0.5",
+    "react-swipeable": "^7.0.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
