--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
@@ -56,6 +57,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^4.2.1",
     "react-pdf": "^9.2.1",
     "react-query": "^3.39.3",
@@ -76,6 +78,7 @@
     "eslint": "^9.23.0",
     "eslint-config-next": "15.2.3",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-formatter-unix": "^8.40.0",
     "eslint-plugin-prettier": "^5.2.3",
     "husky": "^8.0.3",
     "lint-staged": "^15.5.0",
